# CosmicEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build.sh  json_demo_save.json  main.cpp
.github/workflows/: deploy-docs.yml
cmake/: BundleLinuxDeps.cmake  WriteLinuxLauncher.cmake  cosmic_project_config.hpp.in  cosmic_project_entry.hpp.in  linux-launcher.in
default/model/: warhammer.fbx
docs/: mainpage.dox  manual_tecnico.md  manual_usuario.md
include/CosmicEngine/collisions/: CollisionArea.cpp  CollisionArea.hpp  CollisionArea2D.cpp  CollisionArea2D.hpp  GameGridCollisions.cpp  GameGridCollisions.hpp  GameQuadTreeCollisions.cpp  GameQuadTreeCollisions.hpp  collision_area.cpp  collision_area.hpp  game_grid_collisions.cpp  game_grid_collisions.hpp  game_quad_tree_collisions.cpp  game_quad_tree_collisions.hpp
include/CosmicEngine/interfaces/: definitions.hpp  event.hpp  ievent.hpp  imanager.cpp  imanager.hpp  imanager_singleton.cpp  imanager_singleton.hpp
include/CosmicEngine/managers/: game_manager.cpp  game_manager.hpp
include/CosmicEngine/utils/: log.hpp  logger.cpp  logger.hpp
include/WandEngine/Collisions/: GameGridCollisions.cpp  GameGridCollisions.hpp
include/WandEngine/Interfaces/: Definitions.hpp  Event.hpp  IEvent.hpp
include/WandEngine/Managers/: AudioManager.hpp  BodyManager.cpp  BodyManager.hpp  CameraManager.cpp  CameraManager.hpp  EventManager.cpp  EventManager.hpp  GameManager.cpp  GameManager.hpp  InputManager.cpp  InputManager.hpp  MusicManager.cpp  MusicManager.hpp  ObjectManager.cpp  ObjectManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  ScheduleManager.hpp  SoundManager.cpp  TimerManager.cpp  UIManager.cpp  UIManager.hpp
include/WandEngine/Models/: GameBodyObject.cpp  GameBodyObject.hpp  GameObject.cpp  GameObject.hpp  GameScene.cpp  GameScene.hpp  GameTimer.cpp  GameTimer.hpp  UIElement.cpp  UIElement.hpp
include/WandEngine/Utils/: Configurations.hpp  Log.hpp
include/assimp/: revision.h
include/glad/: glad.h
lib/glad/src/: glad.c
licenses/: KHR_khrplatform_LICENSE.txt  README.md
projects/BasicDemo_2D/: project.cmake
projects/BasicDemo_2D/entities/: json_demo_object.cpp  json_demo_object.hpp
projects/BasicDemo_2D/scenes/: main_scene.cpp
projects/BasicDemo_3D/: project.cmake
projects/BasicDemo_3D/entities/: collision_demo_object_3d.cpp
projects/BasicDemo_3D/scenes/: main_scene.cpp
projects/NetworkDemo/: project.cmake
projects/NetworkDemo/entities/: network_demo_player.hpp  network_demo_projectile.cpp
projects/PuzzleRPG/: project.cmake
projects/PuzzleRPG/entities/: button_object.cpp  button_object.hpp  collision_block.cpp  collision_block.hpp  decor_object.cpp  decor_object.hpp  door_object.cpp  door_object.hpp  firefly_light_object.cpp  firefly_light_object.hpp  pickup_object.cpp  pickup_object.hpp  pressure_plate.cpp  pressure_plate.hpp  pushable_object.cpp  pushable_object.hpp  puzzle_player.cpp  puzzle_player.hpp  puzzle_tile.cpp  puzzle_tile.hpp  sign_object.cpp  sign_object.hpp  teleporter_object.cpp  teleporter_object.hpp  torch_light_object.cpp  torch_light_object.hpp  wall_block_object.cpp  wall_block_object.hpp
projects/PuzzleRPG/scenes/: editor_scene.cpp  editor_scene.hpp  editor_select_scene.cpp  editor_select_scene.hpp  gameplay_scene.cpp  gameplay_scene.hpp  level_select_scene.cpp  level_select_scene.hpp  main_menu_scene.cpp  main_menu_scene.hpp  multiplayer_lobby_scene.cpp  multiplayer_lobby_scene.hpp
projects/PuzzleRPG/systems/: class_ids.hpp  debug_text.hpp  dialog_box.cpp  dialog_box.hpp  game_session.hpp  grid.cpp  grid.hpp  level_data.cpp  level_data.hpp  level_runtime.cpp  level_runtime.hpp  menu_background.cpp  menu_background.hpp  net_protocol.cpp  net_protocol.hpp
projects/PuzzleRPG/utilities/: paths.hpp  puzzle_asset_defines.hpp  puzzle_input_actions.hpp  puzzle_menu_music.hpp  puzzle_sprite_support.hpp
projects/sandbox_3D/: project.cmake
projects/sandbox_3D/entities/: sandbox_hammer_object_3d.cpp  sandbox_hammer_object_3d.hpp  sandbox_light_object_3d.cpp  sandbox_light_object_3d.hpp  sandbox_rotating_cube_object_3d.cpp  sandbox_rotating_cube_object_3d.hpp
projects/sandbox_3D/scenes/: sandbox_scene_3d.cpp  sandbox_scene_3d.hpp
src/: enet_impl.c  main.cpp
src/Entities/: Background.cpp  Background.hpp  BackgroundObject.cpp  BackgroundObject.h  BackgroundObject.hpp  Cube.cpp  Cube.hpp  CustomEnemy.cpp  CustomEnemy.h  CustomEnemy.hpp  EndLevel.cpp  EndLevel.hpp  Ground.cpp  Ground.hpp  HandEditorObject.cpp  HandEditorObject.hpp  LinkObject.cpp  LinkObject.h  LinkObject.hpp  MapTileObject.cpp  MapTileObject.h  MapTileObject.hpp  Orb.cpp  Orb.hpp  Player.cpp  Player.hpp  ProjectileObject.cpp  ProjectileObject.hpp  SolidBlock.cpp  SolidBlock.hpp  Spike.cpp  Spike.hpp
src/Events/: Logger.cpp  Logger.hpp
src/Scenes/: GameEditorScene.cpp  GameEditorScene.hpp  GameInScene.cpp  GameInScene.h  GameInScene.hpp  MainScene.cpp  MainScene.h  MainScene.hpp  SecondScene3D.cpp  SecondScene3D.hpp
src/Utilities/: DataManager.cpp  DataManager.hpp  GameData.hpp  Paths.h  Paths.hpp  Probabilitys.hpp  TypeVarsAndMethods.hpp
src/Utilities/Interactive/: Button.cpp  Button.h  ButtonSlider.cpp  ButtonSlider.h  ButtonText.cpp  ButtonText.h
src/WandAllegroEngine/Collisions/: GameGridCollisions.cpp  GameGridCollisions.h  GameGridCollisions.hpp
src/WandAllegroEngine/Interfaces/: Definitions.hpp  GameEvent.hpp
src/WandAllegroEngine/Managers/: BodyManager.cpp  BodyManager.hpp  CameraManager.cpp  CameraManager.hpp  EventManager.cpp  EventManager.hpp  GameBodyManager.cpp  GameBodyManager.h  GameBodyManager.hpp  GameManager.cpp  GameManager.h  GameManager.hpp  GameObjectManager.cpp  GameObjectManager.h  GameObjectManager.hpp  GameSceneManager.h  (+16 more)
src/entities/: collision_demo_object_3d.cpp  collision_demo_object_3d.hpp  json_demo_object.cpp  json_demo_object.hpp  network_demo_player.cpp  network_demo_projectile.hpp
src/scenes/: main_scene.cpp  main_scene.hpp  network_demo_scene.cpp  network_demo_scene.hpp
src/utilities/: paths.hpp
(+167 files in other folders)
